Changes since CEXP-2.1
 2012/07/12:
 - xsyms.c:
    o added option to accept undefined symbols.
    o check return value of pmelf_newstrm().
 - Makefile.am, configure.ac, cexp.c, cexplock.h, cexplock.c, cexpmod.c, 
   context.h:
   Implemented support for using pthread mutexes, rwlocks and thread-specific
   keys to support multithreaded CEXP on pthread platforms. 
   Must be enabled at configure-time by giving --enable-pthreads.
 2012/07/11:
 - cexp.c: BUGFIX - cexpSearchFile() must not free 'thename' if it is handed
           out to the user (ugly API anyways).
 - cexpsyms.c, rshload.c, Makefile.am: moved rshLoad() into separate file.
 2012/06/28:
 - cexp.c, configure.ac: added '-i/-I' options and --enable-interactive-default
 - cexp.c: fall back to trying argv[0] as a symbol file if no -s given and
   no internal symbol table is found.
 - configure.ac: for linux/host demo, link terminfo (libtinfo) if necessary/available.
Changes since CEXP-2.0.beta
 2011/10/10:
 - libtecla/Makefile.am: add manpages to EXTRA_DIST and MAINTAINERCLEANFILES.
 2011/10/10:
 - Makefile.am: add cxxdummy to EXTRA_DIST.
 - Makefile.am: add cpptest contents explicitly to EXTRA_DIST (instead of
                entire subdir which would include CVS/
 2011/08/04:
 - Makefile.am: export host_alias, host_os, and host_cpu.
 2011/07/15:
 - cexp.c: set terminal to VMIN/VTIME=1/0 in native readline (no readline, no tecla).
 2011/07/15:
 - Makefile.am: export rtems_bsp, RTEMS_BSP, enable_rtemsbsp, package_subdir
   variables so third-party makefiles 'inherit' them (in case any is embedded
   in an installation path/prefix).
 2010/06/10:
 - configure.ac: check for multilibbed cpukit only if host_os is RTEMS.
 2010/05/06:
 - Makefile.am:
    o enforce linking undefined symbols needed by test modules (demo program)
    o link demo with CXX
 - bfdstuff.c: BUGFIX -- Ignore relocations that refer to a symbol in a
               discarded linkonce section.